xee-xpath-outer/tests/snapshots/xpath__range_greater.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"5 to 1\")"
---
Ok(
    Sequence {
        stack_value: Empty,
    },
)
