xee-xpath-outer/tests/snapshots/xpath__sequence_predicate.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2, 3)[(2, 3)[. > 2]]\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    3,
                ),
            ),
        ),
    },
)
