xee-xpath-outer/tests/snapshots/xpath__simple_map_last.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(4, 5, 6) ! (fn:last())\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    Integer(
                        Integer,
                        3,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        3,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        3,
                    ),
                ),
            ],
        ),
    },
)
