xee-xpath-outer/tests/snapshots/xpath__simple_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'hello'\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "hello",
                ),
            ),
        ),
    },
)
