xee-xpath-outer/tests/snapshots/xpath__some_quantifier_expr_true.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"some $x in (1, 2, 3) satisfies $x eq 2\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
