xee-xpath-outer/tests/snapshots/xpath__string_compare_eq_false.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'hello' eq 'world'\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    false,
                ),
            ),
        ),
    },
)
