xee-xpath-outer/tests/snapshots/xpath__value_lt_false.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"2 lt 1\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    false,
                ),
            ),
        ),
    },
)
